# ml_distributed_fraud_engine

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CURL-release-armv8-data.cmake  CURLConfig.cmake  Dockerfile  FindCURL.cmake  FindOpenSSL.cmake  FindPostgreSQL.cmake  GTest-release-armv8-data.cmake  HOW_TO_USE.md  MASTER_PROMPT.md  OPUS_CONTEXT.md  OpenSSL-release-armv8-data.cmake  OpenSSLConfig.cmake  OpenSSLConfigVersion.cmake  PostgreSQL-Target-release.cmake  PostgreSQL-release-armv8-data.cmake  PostgreSQLConfig.cmake  README.md  RdKafka-Target-release.cmake  RdKafka-release-armv8-data.cmake  RdKafkaConfig.cmake  RdKafkaTargets.cmake  ZLIB-release-armv8-data.cmake  absl-config.cmake  absl-release-armv8-data.cmake  c-ares-config-version.cmake  c-ares-config.cmake  c-ares-release-armv8-data.cmake  civetweb-Target-release.cmake  civetweb-config-version.cmake  civetweb-config.cmake  civetweb-release-armv8-data.cmake  civetwebTargets.cmake  conanbuild.sh  conanbuildenv-release-armv8.sh  conandeps_legacy.cmake  conanfile.txt  (+35 more)
.cmake/api/v1/reply/: error-2026-05-12T02-32-46-0379.json
include/: config.h
infra/monitoring/: grafana_dashboard.json  prometheus.yml
ml_server/: Dockerfile  requirements.txt  server.py
ml_server/model/: .gitkeep
proto/: fraud.proto
scripts/: load_test.py  producer.py  seed_redis.py  train_model.py
src/: main.cpp
src/consumer/: kafka_consumer.cpp  kafka_consumer.h
src/enrichment/: redis_feature_store.cpp  redis_feature_store.h
src/metrics/: prometheus_metrics.cpp  prometheus_metrics.h
src/routing/: kafka_producer.cpp  kafka_producer.h
src/scoring/: grpc_ml_client.cpp  grpc_ml_client.h  rule_engine.cpp  rule_engine.h
src/utils/: circuit_breaker.cpp  circuit_breaker.h  thread_pool.cpp  thread_pool.h
tests/: test_circuit_breaker.cpp  test_rule_engine.cpp  test_thread_pool.cpp
